--- a/src/pages/home/school/SchoolPage.css
+++ b/src/pages/home/school/SchoolPage.css
@@ -4,10 +4,9 @@
 
 .subject-card {
   --padding-start: 0;
-
   --inner-border-width: 0;
-  border-radius: 24px;
-  border: 2px solid var(--ion-color-medium);
+  border-radius: 16px;
+  border: 1px solid var(--ion-color-medium);
   margin: 0px 20px;
 }
 
@@ -32,5 +31,20 @@
   border-radius: 20px;
   margin-top: 5px !important;
   background-color: var(--ion-color-medium);
-  color: var(--ion-color-light-tint);
+  color: var(--ion-color-light-shade);
+}
+
+.option-slide-container {
+  margin-right: 20px;
+  border: none;
+}
+
+.remove-option-slide {
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
+  color: white;
+}
+
+.edit-option-slide {
+  color: white;
 }
